WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170201
Safari crashes when attempting to close tab that is displaying PDF
https://bugs.webkit.org/show_bug.cgi?id=170201
Summary
Safari crashes when attempting to close tab that is displaying PDF
Tim Horton
Reported
2017-03-28 14:29:30 PDT
Safari crashes when attempting to close tab that is displaying PDF
Attachments
Patch
(4.91 KB, patch)
2017-03-28 14:29 PDT
,
Tim Horton
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-03-28 14:29:40 PDT
Created
attachment 305642
[details]
Patch
Tim Horton
Comment 2
2017-03-28 14:45:06 PDT
https://trac.webkit.org/changeset/214495/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug